# paint

./: README.md  pyproject.toml
docs/: conf.py  index.rst  paint.structs.rst
examples/: spice.py
scripts/: build.sh  docs.sh  gui.sh  lint.sh  test.sh
src/paint/: __init__.py  _math.py  config.py  constants.py  core.py  metrics.py  plotting.py  sensors.py  states.py  structs.py
src/paint/gui/: index.html  main.js  package.json  preload.js  renderer.js
src/paint/math/: geometry.py  matrix.py  transformations.py  transforms.py  vector.py
src/paint/utils/: plotting.py  spice.py
